perf: add section and some fixes - add 'notes and recents'heading over notes section - add 'working on' section - fixed recents overlapping with lower components - fixed footer height

--- a/style.css
+++ b/style.css
@@ -125,12 +125,26 @@ form {
     outline: none;
 }
 
+/* cards */
+
+.card_sec_heading {
+    background-color: rgb(231, 236, 241);
+    font-family: monospace;
+    font-size: 40px;
+    font-weight: 100;
+    padding-left: 3rem;
+    padding-top: 2.5rem;
+    border-radius: 1rem;;
+}
+
 /* background of the card wrapper */
 .card_container { 
     display:flex;
     padding: 3%;
+    padding-top: 10px;
     background-color: white; /* rgb(185, 178, 138) */
-    height: 50rem;
+    height: auto;
+    margin-left: 10px;
 }
 
 .card_wrapper {
@@ -204,10 +218,6 @@ form {
     border-bottom-right-radius: 12px;
 }
 
-/* .card_heading:hover {
-
-} */
-
 .card_body{
     background-color:  rgb(155, 190, 192);
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -220,15 +230,6 @@ form {
     border-top-right-radius: 8px;
     border-bottom-left-radius: 8px;
     border-bottom-right-radius: 8px;
-}
-
-/* .card_body_txt {
-
-} */
-
-.card_content {    
-    margin-top:  15px;
-    margin-left: 10px;
 }
 
 .new_note {
@@ -300,11 +301,28 @@ form {
     border-width: 0.01rem;
 }
 
+/* working on */
+.working_on_container {
+    height:auto;
+    padding: 1rem;
+    background-color: rgb(239, 235, 235);
+}
+.working_on_heading {
+    font-family: monospace;
+    font-size: 40px;
+    font-weight: 100;
+    padding-left: 3rem;
+    padding-top: 2.5rem;
+}
+
+.working_on_info {
+   padding: 0.5rem 0rem 1rem 4.2rem;
+}
+
 
 footer {
-    margin-top: 20rem;
-    height: 10rem;
-    background-color: rgb(79, 85, 79);
+    height: auto;
+    background-color: rgb(73, 65, 73);
 }
 
 .footer_txt {
@@ -312,19 +330,17 @@ footer {
     display: flex;
     justify-content: center;
    
-    
 }
 .footer_txt b {
-    padding: 0.4rem;
-    color: black;
-    padding: 6px;
-    background-color: rgb(200, 0, 255); 
+    padding: 1.4rem;
+    color: rgb(43, 42, 43);
+    background-color: rgb(142, 184, 103); 
     border-top-left-radius: 1rem;
     border-top-right-radius: 1rem;
     border-bottom-left-radius: 1rem;
     border-bottom-right-radius: 1rem;
     font-size: 15px;
-    font-weight: 490;
+    font-weight: 590;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
@@ -411,7 +427,6 @@ footer {
         font-size: 25px;   /* logo size */
         display: grid;
         grid-template-rows: repeat(2, 0.2fr);
-        padding-left: 20px;
     } 
     .search_title {
         margin-left: -3rem;
@@ -463,7 +478,7 @@ footer {
     
     .card {
         display: grid;
-        grid-template-columns: repeat(1, 1fr);
+        grid-template-columns: repeat(2, 1fr);
         gap: 0.5rem;
         padding: 15px;
     }
@@ -533,5 +548,8 @@ footer {
         grid-template-rows: repeat(2, 1fr);
         gap: 1rem;
     }
+    .recents_container {
+        width: 90%;
+     }
     
 }
